# Generative-Design-for-Architecture

./: .gitignore  0396.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: gan_config.yaml  vae_config.yaml
demo/: app.py
notebooks/: quick_start.ipynb
scripts/: sample.py  train.py
src/generative_design/: __init__.py  config.py  data.py  metrics.py  models.py  utils.py
tests/: test_generative_design.py
